--- a/src/scss/views/_settings.scss
+++ b/src/scss/views/_settings.scss
@@ -1,49 +1,48 @@
 .source-list {
 	margin: 0 0 15px -10px;
-	
-	.source-list-item {
-		width: 340px;
-		padding: 12px 0;
-			
-		.text {
-			width: 240px;
-			display: inline-block;
-			line-height: 24px;
-			min-height: 24px;
-		}
+}
+.source-list-item {
+	width: 340px;
+	padding: 12px 0;
+		
+	.text {
+		width: 240px;
+		display: inline-block;
+		line-height: 24px;
+		min-height: 24px;
+	}
+	&:hover {
+		background-color: #fafafa;
+	}
+	&:active {
+		background-color: #f0f0f0;
+	}
+	.icon {
+		font-size: 24px;
+		padding: 0 8px;
+		width: 24px;
+		height: 24px;
+		line-height: 24px;
+		display: inline-block;
+		vertical-align: middle;
+	}
+	.icon.button {
+		top: 12px;
+		right: 0;
+		width: 48px;
+		height: 48px;
+		padding: 0;
+		font-size: 14px;
+		line-height: 48px;
+		text-align: center;
+		position: absolute;
+		vertical-align: middle;
+
 		&:hover {
-			background-color: #fafafa;
+			background-color: #f3f3f3;
 		}
 		&:active {
-			background-color: #f0f0f0;
-		}
-		.icon {
-			font-size: 24px;
-			padding: 0 8px;
-			width: 24px;
-			height: 24px;
-			line-height: 24px;
-			display: inline-block;
-			vertical-align: middle;
-		}
-		.icon.button {
-			top: 12px;
-			right: 0;
-			width: 48px;
-			height: 48px;
-			padding: 0;
-			font-size: 14px;
-			line-height: 48px;
-			text-align: center;
-			position: absolute;
-			vertical-align: middle;
-
-			&:hover {
-				background-color: #f3f3f3;
-			}
-			&:active {
-				background-color: #eee;
-			}
+			background-color: #eee;
 		}
 	}
 }
@@ -53,5 +52,15 @@
 .setting-group {
 	width: 100%;
 	margin-bottom: 15px;
-	padding-left: 25px;
+	padding-left: $gutter-width;
+
+	.btn-link {
+		padding-left: 0;
+		padding-right: 0;
+		margin-left: $spacing;
+
+		&:first-child {
+			margin-left: 0;
+		}
+	}
 }
