--- a/src/scss/views/_settings.scss
+++ b/src/scss/views/_settings.scss
@@ -1,10 +1,10 @@
 .source-list {
-	margin: 0 0 15px -10px;
+	margin: 0 0 $spacing #{-$gutter-width / 2};
 }
 .source-list-item {
 	width: 340px;
-	padding: 12px 0;
-		
+	padding: 12px 0 12px #{$gutter-width / 2};
+
 	.text {
 		width: 240px;
 		display: inline-block;
@@ -19,12 +19,14 @@
 	}
 	.icon {
 		font-size: 24px;
-		padding: 0 8px;
 		width: 24px;
 		height: 24px;
 		line-height: 24px;
 		display: inline-block;
 		vertical-align: middle;
+	}
+	.icon:first-child {
+		margin-right: $spacing / 2;
 	}
 	.icon.button {
 		top: 12px;
