--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,9 @@
 @import "common/variables";
+@import "common/reset";
 @import "common/layout";
 @import "components/text";
-@import "components/button";
+@import "components/link";
+@import "components/tags";
 @import "components/switch";
 @import "components/alert";
 @import "components/progress";
