--- a/src/scss/views/_picture.scss
+++ b/src/scss/views/_picture.scss
@@ -109,43 +109,19 @@
 	box-shadow: 0 0 8px rgba(0,0,0,0.5);
 
 	.info-item {
-		margin-bottom: 20px;
+		margin-bottom: $spacing;
 	}
 	.info-item:last-child {
 		margin-bottom: 0;
 	}
-	.info-item .info-item-name {
-		color: #888;
+	.info-item-name {
+		color: $gray-600;
+		display: block;
 	}
-}
-.tag-list {
-	margin-top: 5px;
-}
-.tag-list-item {
-	border: 1px solid #eee;
-	display: inline-block;
-	margin: 0 5px 5px 0;
-
-	.text, textview {
-		display: inline-block;	
-		padding: 4px 8px;
-		color: #666;
-		line-height: 24px;
-		font-size: 13px;
+	.info-item-value {
+		display: block;
 	}
-	.text:first-child {
-		padding-right: 0;
-	}
-	.btn-delete {
-		color: #ddd;
-		pointer-events: auto;
-		display: inline-block;
-		font-size: 14px;
-	}
-	.btn-delete:hover {
-		color: #aaa;
-	}
-	.btn-delete:active {
-		color: #888;
+	starrating .icon-star {
+		color: $orange;
 	}
 }
