--- a/src/scss/components/_progress.scss
+++ b/src/scss/components/_progress.scss
@@ -2,10 +2,10 @@ progress {
 	width: 100%;
 	height: 14px;
 	display: block;
-	background-color: #fafafa;
+	background-color: #fbfbfb;
 }
 progressbar {
 	width: 100%;
 	height: 100%;
-	background-color: #888;
+	background-color: $primary-color;
 }
