--- a/src/scss/components/_alert.scss
+++ b/src/scss/components/_alert.scss
@@ -1,17 +1,14 @@
-.alert {
-	top: 60px;
-	right: 20px;
+.app-alert {
+	top: $view-navbar-height + $spacing;
+	right: $gutter-width;
 	position: absolute;
-	padding: 10px;
-	min-width: 164px;
-	background-color: #fafafa;
-	border: 1px solid #eee;
-}
-.alert .alert-title {
-	font-size: 16px;
-}
-.alert .alert-text {
-	color: #888;
-	font-size: 13px;
-	display: block;
+	min-width: 180px;
+
+	.alert-header {
+		font-size: $font-size;
+		font-weight: 500;
+	}
+	.alert-text {
+		font-size: $font-size - 1px;
+	}
 }
