--- a/app/assets/views/picture.xml
+++ b/app/assets/views/picture.xml
@@ -23,13 +23,13 @@
         <widget id="picture-viewer-target" class="picture-container"></widget>
         <widget class="zoom-btn-group">
           <widget id="btn-picture-zoom-out" class="icon-btn picture-option-btn">
-            <widget class="icon icon icon-minus" type="textview"></widget>
+            <widget type="icon" name="minus"></widget>
           </widget>
           <widget id="btn-picture-reset-size" class="icon-btn picture-option-btn">
-            <widget class="icon icon icon-fullscreen" type="textview"></widget>
+            <widget type="icon" name="fullscreen"></widget>
           </widget>
           <widget id="btn-picture-zoom-in" class="icon-btn picture-option-btn">
-            <widget class="icon icon icon-plus" type="textview"></widget>
+            <widget type="icon" name="plus"></widget>
           </widget>
         </widget>
         <widget id="btn-picture-prev" class="icon-btn picture-switch-btn prev">
