--- a/src/scss/views/_browser.scss
+++ b/src/scss/views/_browser.scss
@@ -9,7 +9,7 @@
 		background-color: transparent;
 	}
 }
-.file-list-item-folder {
+.file-folder {
 	width: 300px;
 	height: 134px;
 	display: inline-block;
@@ -54,7 +54,7 @@
 		border-color: $primary-color;
 	}
 }
-.file-list-item-picture {
+.file-picture {
 	height: 226px;
 	width: 226px;
 	display: inline-block;
